header desktop done

--- a/dev/index.html
+++ b/dev/index.html
@@ -1,7 +1,6 @@
 @@include('templates/head.html')
 @@include('templates/header.html')
-<main>
-    @@include
-</main>
-@@include('templates/footer.html')
-@@include('templates/script-js.html)
+
+<section class="body">
+
+</section>
