--- a/dev/index.html
+++ b/dev/index.html
@@ -1,5 +1,7 @@
 @@include('templates/head.html')
 @@include('templates/header.html')
+@@include('templates/banner.html')
+@@include('templates/footer.html')
 
 <section class="body">
 
