--- a/dev/index.html
+++ b/dev/index.html
@@ -1,7 +1,13 @@
 @@include('templates/head.html')
 @@include('templates/header.html')
 @@include('templates/banner.html')
+
+<main class="wrapper home">
+  @@include('templates/first-screen.html')
+</main>
 @@include('templates/footer.html')
+@@include('templates/calculation.html')
+@@include('templates/advantages.html')
 
 <section class="body">
 
