delivery desktop/mobile done

--- a/dev/index.html
+++ b/dev/index.html
@@ -8,7 +8,10 @@
 @@include('templates/footer.html')
 @@include('templates/calculation.html')
 @@include('templates/advantages.html')
+@@include('templates/delivery.html')
+
 
 <section class="body">
-
+	
 </section>
+
