--- a/dev/index.html
+++ b/dev/index.html
@@ -9,9 +9,12 @@
 @@include('templates/calculation.html')
 @@include('templates/advantages.html')
 @@include('templates/delivery.html')
+@@include('templates/services.html')
+@@include('templates/description.html')
+
+
 
 
 <section class="body">
-	
-</section>
 
+</section>
