servies desktop / mobile done

--- a/dev/index.html
+++ b/dev/index.html
@@ -11,6 +11,8 @@
 @@include('templates/delivery.html')
 @@include('templates/services.html')
 @@include('templates/description.html')
+@@include('templates/questions.html')
+
 
 
 
