cooperation desktop / mobile done

--- a/dev/index.html
+++ b/dev/index.html
@@ -12,6 +12,8 @@
 @@include('templates/services.html')
 @@include('templates/description.html')
 @@include('templates/questions.html')
+@@include('templates/cooperation.html')
+
 
 
 
